feat: create task status update route & swagger definition
