# src/routes/task-router.ts
@@ -1,4 +1,9 @@
-import { createTask, deleteTask, updateTask } from "controllers";
+import {
+  createTask,
+  deleteTask,
+  updateTask,
+  updateTaskStatus,
+} from "controllers";
 import express from "express";
 
 const taskRouter = express.Router();
@@ -6,5 +11,6 @@ const taskRouter = express.Router();
 taskRouter.post("/tasks", createTask);
 taskRouter.delete("/tasks/:taskId", deleteTask);
 taskRouter.put("/tasks/:taskId", updateTask);
+taskRouter.put("/tasks/status/:taskId", updateTaskStatus);
 
 export default taskRouter;
